# collisions

./: CMakeLists.txt  main.cpp
